--- a/src/styles.css/Welcome.css
+++ b/src/styles.css/Welcome.css
@@ -1,10 +1,12 @@
 /* Mobile first styles */
+
 .welcome {
   height: 100vh;
   background-image: url("/images/laptop.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  /* overflow-x: hidden; */
 }
 
 .name,
@@ -24,7 +26,7 @@
 
 .presentation-profesion {
   /* border: 2px solid red; */
-  padding-top: 0.3rem;
+  /* padding-top: 0.1rem; */
   padding-left: 11.5rem;
   font-size: 1.8rem;
   font-style: italic;
