--- a/src/styles.css/Projects.css
+++ b/src/styles.css/Projects.css
@@ -24,12 +24,20 @@ img {
 }
 
 .card {
+  opacity: 0; /* Oculta inicialmente la card */
+  transform: translateY(50px); /* Desplaza ligeramente hacia abajo */
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out; /* Transición suave */
   margin: 0 auto;
   width: 19rem;
   /* border: 2px solid red; */
   background-color: #526eec;
   border-radius: 0.8rem;
   margin-bottom: 1.5rem;
+}
+
+.card.visible {
+  opacity: 1; /* Hace visible la card */
+  transform: translateY(0); /* La card vuelve a su posición original */
 }
 
 .profile-details p {
